--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,59 +1,18 @@
-# Improve color
+# Enable true color support
 set -g default-terminal "screen-256color"
 set -ga terminal-overrides ",*:Tc"
 
-# Address vim mode switching delay
+bind r source-file ~/.tmux.conf
+
 set -sg escape-time 0
-
-# Enable mouse mode
-set -g mouse on
-
-# Increase scrollback buffer size
-set-option -g history-limit 5000
+set -g history-limit 100000
 
 # Start windows and panes at 1
 set -g base-index 1
+setw -g pane-base-index 1
 set -g renumber-windows on
 
-# Status bar configuration
-set-option -g status-justify left
-set-option -g status-style bg=default,fg=colour252
-set-option -g window-status-style fg=colour244
-set-option -g window-status-current-style fg=colour252
-set -g status-right-length 100
-set -g status-right "#{prefix_highlight} #{s|/Users/huyvo|~|:pane_current_path} [#{battery_percentage}]"
-set -g status-interval 1
-
-# Panes settings
-set -g pane-border-style bg=default,fg=colour238
-set -g pane-active-border bg=default,fg=colour238
-
-unbind %
-bind b split-window -v -c "#{pane_current_path}"
-unbind '"'
-bind v split-window -h -c "#{pane_current_path}"
-unbind x
-bind x kill-pane
-bind-key "c" new-window -c "#{pane_current_path}"
-
-bind-key -r < swap-window -t -1 \; previous-window
-bind-key -r > swap-window -t +1 \; next-window
-bind-key -r H resize-pane -L 10
-bind-key -r J resize-pane -D 10
-bind-key -r K resize-pane -U 10
-bind-key -r L resize-pane -R 10
-
-# Restoring Clear Screen (C-l)
-bind C-l send-keys 'C-l'
-
-# Use vi(m) key bindings
-setw -g mode-keys vi
-bind -T copy-mode-vi v send-keys -X begin-selection
-bind -T copy-mode-vi y send-keys -X copy-pipe "pbcopy"
-unbind -T copy-mode-vi Enter
-bind -T copy-mode-vi Enter send -X copy-pipe-and-cancel "pbcopy"
-bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe "pbcopy"
-
+# Select windows
 bind-key -n M-1 select-window -t :1
 bind-key -n M-2 select-window -t :2
 bind-key -n M-3 select-window -t :3
@@ -64,6 +23,27 @@ bind-key -n M-7 select-window -t :7
 bind-key -n M-8 select-window -t :8
 bind-key -n M-9 select-window -t :9
 
+# Status bar configuration
+set -g status-interval 1
+set -g status-justify left
+set -g status-style bg=default,fg=colour252
+set -g window-status-style fg=colour244
+setw -g window-status-current-format "#[fg=colour252]#I:#W#[fg=colour50]#F"
+set -g status-right "#{prefix_highlight} #{b:pane_current_path} [#{battery_percentage}]"
+
+# Panes configuration
+set -g pane-border-style bg=default,fg=colour238
+set -g pane-active-border bg=default,fg=colour238
+bind-key b split-window -v -c "#{pane_current_path}"
+bind-key v split-window -h -c "#{pane_current_path}"
+bind-key x kill-pane
+
+# Use vim key bindings in copy mode
+setw -g mode-keys vi
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi V send-keys -X select-line
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+
 # tmux-prefix-highlight
 set -g @prefix_highlight_bg default
 set -g @prefix_highlight_show_copy_mode 'on'
@@ -73,4 +53,5 @@ set -g @prefix_highlight_copy_mode_attr 'fg=black,bg=yellow'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
 run "~/.tmux/plugins/tpm/tpm"
