--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,32 +1,47 @@
-[include]
-  path = ~/.gitconfig.local
-[core]
-  editor = $EDITOR
-  excludesfile = ~/.gitignore
-  ignorecase = false
-  abbrev = 12
 [alias]
-  l  = log --graph --oneline --decorate
-  ld = log --graph --pretty=format:'%C(yellow)%h%C(bold white red)%d%Creset %s %C(bold green)%cr %Creset%C(white)%an' --abbrev-commit --date=relative
-  ll = log --stat --decorate --source -p
-  branches = for-each-ref --sort=-committerdate --format=\"%(color:blue)%(authordate:relative)\t%(color:red)%(authorname)\t%(color:white)%(color:bold)%(refname:short)\" refs/remotes
+	l = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset'
+
+[core]
+	pager = delta
+	excludesfile = ~/.gitignore
+	attributesfile = ~/.gitattributes
+	abbrev = 12
+	ignorecase = false
+
 [color]
-  ui = auto
-[diff]
-  algorithm = patience
-  colorMoved = zebra
-[push]
-  default = current
-[merge]
-  ff = only
+	ui = auto
+
 [commit]
-  template = ~/.gitmessage
-  verbose = true
-[fetch]
-  prune = true
-[rebase]
-  autosquash = true
-[pager]
-  branch = false
+	template = ~/.gitmessage
+
+[diff]
+	renames = copies
+
+[include]
+	path = ~/.gitconfig.local
+
+[merge]
+	ff = only
+	conflictstyle = diff3
+
+[push]
+	default = simple
+	followTags = true
+
 [pull]
-  ff = only
+	ff = only
+
+[pager]
+	branch = false
+
+[interactive]
+	diffFilter = delta --color-only
+
+[delta]
+	features = side-by-side line-numbers decorations
+	whitespace-error-style = 22 reverse
+
+[delta "decorations"]
+	commit-decoration-style = bold yellow box ul
+	file-style = bold yellow ul
+	file-decoration-style = none
