Turn off delta side-by-side

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -38,7 +38,7 @@
 	diffFilter = delta --color-only
 
 [delta]
-	features = side-by-side line-numbers decorations
+	features = line-numbers decorations
 	whitespace-error-style = 22 reverse
 
 [delta "decorations"]
