--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -28,7 +28,7 @@ set -g status-interval 1
 set -g status-justify left
 set -g status-style bg=default,fg=colour252
 set -g window-status-style fg=colour244
-set -g window-status-current-style fg=colour252
+setw -g window-status-current-format "#[fg=colour252]#I:#W#[fg=colour121]#F"
 set -g status-right "#{prefix_highlight} #{b:pane_current_path} [#{battery_percentage}]"
 
 # Panes configuration
