--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -38,6 +38,9 @@ bind-key b split-window -v -c "#{pane_current_path}"
 bind-key v split-window -h -c "#{pane_current_path}"
 bind-key x kill-pane
 
+# Mouse on
+set -g mouse on
+
 # Use vim key bindings in copy mode
 setw -g mode-keys vi
 bind-key -T copy-mode-vi v send-keys -X begin-selection
