--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -202,8 +202,8 @@ schemes:
      background: '#050505'
      foreground: '#f0f0f0'
     cursor:
-     text: '#161821'
-     cursor: '#8AAC8B'
+     text: '#191919'
+     cursor: '#85e89d'
     normal:
      black:   '#0f0f0f'
      red:     '#AC8A8C'
