--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -26,14 +26,14 @@ bind-key -n M-9 select-window -t :9
 # Status bar configuration
 set -g status-interval 1
 set -g status-justify left
-set -g status-style bg=default,fg=colour252
+set -g status-style bg=default,fg=white
 set -g window-status-style fg=colour244
-set -g window-status-current-style fg=colour252
+set -g window-status-current-style fg=white
 set -g status-right "#{prefix_highlight} #{b:pane_current_path} [#{battery_percentage}]"
 
 # Panes configuration
-set -g pane-border-style bg=default,fg=colour238
-set -g pane-active-border bg=default,fg=colour238
+set -g pane-border-style bg=default,fg='#262427'
+set -g pane-active-border bg=default,fg='#262427'
 bind-key b split-window -v -c "#{pane_current_path}"
 bind-key v split-window -h -c "#{pane_current_path}"
 bind-key x kill-pane
