brew: remove hugo and install jq

--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -15,9 +15,9 @@ brew "glib"
 brew "gron"
 brew "htop"
 brew "httpie"
-brew "hugo"
 brew "libtool"
 brew "imagemagick"
+brew "jq"
 brew "lua"
 brew "mit-scheme"
 brew "ninja"
