alacritty: set dynamic title and try font JuliaMono

--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -74,7 +74,7 @@ window:
   #title: Alacritty
 
   # Allow terminal applications to change Alacritty's window title.
-  #dynamic_title: true
+  dynamic_title: true
 
   # Window class (Linux/BSD only):
   #class:
@@ -107,7 +107,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: JetBrains Mono NL
+    family: JuliaMono
 
     # The `style` can be specified to pick a specific face.
     style: Regular
