tmux: tweak some settings on titles

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -24,12 +24,16 @@ bind-key -n M-8 select-window -t :8
 bind-key -n M-9 select-window -t :9
 
 # Status bar configuration
-set -g status-interval 1
+set -g status-interval 2
 set -g status-justify left
 set -g status-style bg=default,fg=white
 set -g window-status-style fg=colour244
 set -g window-status-current-style fg=white
 set -g status-right "#{prefix_highlight} #{b:pane_current_path} [#{battery_percentage}]"
+
+# Let programs like Neovim set the terminal title
+# set -g set-titles on
+# set -g set-titles-string "uptime: #(uptime | awk '{print $3}'|sed 's/,//')"
 
 # Panes configuration
 set -g pane-border-style bg=default,fg='#262427'
