Enable supported focus events

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -12,6 +12,9 @@ set -g base-index 1
 setw -g pane-base-index 1
 set -g renumber-windows on
 
+# Enable supported focus events
+set -g focus-events on
+
 # Select windows
 bind-key -n M-1 select-window -t :1
 bind-key -n M-2 select-window -t :2
