--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -6,7 +6,7 @@ tap "jesseduffield/lazygit"
 tap "universal-ctags/universal-ctags"
 brew "automake"
 brew "cmake"
-brew "python@3.8"
+brew "docutils"
 brew "fzf"
 brew "gettext"
 brew "git"
@@ -15,6 +15,7 @@ brew "glib"
 brew "gron"
 brew "htop"
 brew "httpie"
+brew "python@3.8"
 brew "libtool"
 brew "imagemagick"
 brew "jq"
@@ -23,6 +24,7 @@ brew "mit-scheme"
 brew "ninja"
 brew "pkg-config"
 brew "postgresql", restart_service: true
+brew "postgresql@12"
 brew "rbenv"
 brew "redis", restart_service: true
 brew "ripgrep"
