--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -107,7 +107,8 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: JuliaMono
+    # family: JuliaMono
+    family: JetBrains Mono NL
 
     # The `style` can be specified to pick a specific face.
     style: Regular
