--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -227,6 +227,9 @@ schemes:
     primary:
       background: '0x0f0f0f'
       foreground: '0xf0f0f0'
+    cursor:
+      text: '#0f0f0f'
+      cursor: '#e7e7e7'
     normal:
       black:   '0x262626'
       red:     '0xac8a8c'
