--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -175,31 +175,56 @@ draw_bold_text_with_bright_colors: false
 schemes:
   mountaineer: &mountaineer
     primary:
-     background: '#050505'
-     foreground: '#f0f0f0'
+      background: '#050505'
+      foreground: '#f0f0f0'
     cursor:
       text: '#0f0f0f'
       cursor: '#e7e7e7'
     normal:
-     black:   '#0f0f0f'
-     red:     '#AC8A8C'
-     green:   '#8AAC8B'
-     yellow:  '#ACA98A'
-     blue:    '#8F8AAC'
-     magenta: '#AC8AAC'
-     cyan:    '#8AABAC'
-     white:   '#e7e7e7'
+      black:   '#0f0f0f'
+      red:     '#AC8A8C'
+      green:   '#8AAC8B'
+      yellow:  '#ACA98A'
+      blue:    '#8F8AAC'
+      magenta: '#AC8AAC'
+      cyan:    '#8AABAC'
+      white:   '#e7e7e7'
     bright:
-     black:   '#191919'
-     red:     '#C49EA0'
-     green:   '#9EC49F'
-     yellow:  '#C4C19E'
-     blue:    '#A39EC4'
-     magenta: '#C49EC4'
-     cyan:    '#9ec3c4'
-     white:   '#f5f5f5'
+      black:   '#191919'
+      red:     '#C49EA0'
+      green:   '#9EC49F'
+      yellow:  '#C4C19E'
+      blue:    '#A39EC4'
+      magenta: '#C49EC4'
+      cyan:    '#9ec3c4'
+      white:   '#f5f5f5'
+  pure: &pure
+    primary:
+      background: '#000000'
+      foreground: '#e7e7e7'
+    cursor:
+      text: '#0f0f0f'
+      cursor: '#e7e7e7'
+    normal:
+      black:   '#000000'
+      red:     '#ff5370'
+      green:   '#c3e88d'
+      yellow:  '#ffcb6b'
+      blue:    '#82aaff'
+      magenta: '#c792ea'
+      cyan:    '#89ddff'
+      white:   '#ffffff'
+    bright:
+      black:   '#484848'
+      red:     '#FF5370'
+      green:   '#c3e88d'
+      yellow:  '#ffcb6b'
+      blue:    '#82aaff'
+      magenta: '#c792ea'
+      cyan:    '#89ddff'
+      white:   '#ffffff'
 
-colors: *mountaineer
+colors: *pure
 
 # Bell
 #
