tmux: display current path and datetime

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -32,7 +32,8 @@ set -g status-justify left
 set -g status-style bg=default,fg=white
 set -g window-status-style fg=colour244
 set -g window-status-current-style fg=white
-set -g status-right "#{prefix_highlight} #{b:pane_current_path} [#{battery_percentage}]"
+set -g status-right-length 200
+set -g status-right "#{prefix_highlight} #{s|$HOME|~|:pane_current_path} - %a %d %b %I:%M %p [#{battery_percentage}]"
 
 # Let programs like Neovim set the terminal title
 # set -g set-titles on
