--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -223,6 +223,28 @@ schemes:
       magenta: '#c792ea'
       cyan:    '#89ddff'
       white:   '#ffffff'
+  tomorrow: &tomorrow
+    primary:
+      background: '#000000'
+      foreground: '#eaeaea'
+    normal:
+      black:   '#000000'
+      red:     '#df6566'
+      green:   '#c5d15c'
+      yellow:  '#ecce58'
+      blue:    '#8cb6e1'
+      magenta: '#cfabe0'
+      cyan:    '#81cabf'
+      white:   '#ffffff'
+    bright:
+      black:   '#666666'
+      red:     '#df6566'
+      green:   '#c5d15c'
+      yellow:  '#ecce58'
+      blue:    '#8cb6e1'
+      magenta: '#cfabe0'
+      cyan:    '#81cabf'
+      white:   '#ffffff'
 
 colors: *pure
 
