alacritty: disable dynamic title

--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -74,7 +74,7 @@ window:
   #title: Alacritty
 
   # Allow terminal applications to change Alacritty's window title.
-  dynamic_title: true
+  #dynamic_title: true
 
   # Window class (Linux/BSD only):
   #class:
