--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -108,43 +108,10 @@ font:
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
     # family: JuliaMono
-    family: JetBrains Mono NL
+    family: JetBrains Mono
 
     # The `style` can be specified to pick a specific face.
     style: Regular
-
-  # Bold font face
-  #bold:
-    # Font family
-    #
-    # If the bold family is not specified, it will fall back to the
-    # value specified for the normal font.
-    #family: monospace
-
-    # The `style` can be specified to pick a specific face.
-    #style: Bold
-
-  # Italic font face
-  #italic:
-    # Font family
-    #
-    # If the italic family is not specified, it will fall back to the
-    # value specified for the normal font.
-    #family: monospace
-
-    # The `style` can be specified to pick a specific face.
-    #style: Italic
-
-  # Bold italic font face
-  #bold_italic:
-    # Font family
-    #
-    # If the bold italic family is not specified, it will fall back to the
-    # value specified for the normal font.
-    #family: monospace
-
-    # The `style` can be specified to pick a specific face.
-    #style: Bold Italic
 
   # Point size
   size: 12.0
