Change pane border color

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -40,8 +40,8 @@ set -g status-right "#{prefix_highlight} #{s|$HOME|~|:pane_current_path} - %a %d
 # set -g set-titles-string "uptime: #(uptime | awk '{print $3}'|sed 's/,//')"
 
 # Panes configuration
-set -g pane-border-style bg=default,fg='#1F2233'
-set -g pane-active-border bg=default,fg='#1F2233'
+set -g pane-border-style bg=default,fg=colour236
+set -g pane-active-border bg=default,fg=colour236
 bind-key b split-window -v -c "#{pane_current_path}"
 bind-key v split-window -h -c "#{pane_current_path}"
 bind-key x kill-pane
