Enable italics in nvim inside tmux
https://apple.stackexchange.com/a/295584/270970

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,6 @@
 # Enable true color support
-set -g default-terminal "screen-256color"
-set -ga terminal-overrides ",*:Tc"
+set -g default-terminal "tmux-256color-italic"
+set -ga terminal-overrides ",xterm-256color-italic:Tc"
 
 bind r source-file ~/.tmux.conf
 
