--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -169,7 +169,7 @@ schemes:
       magenta: "#C792EA"
       cyan: "#89DDFF"
       white: "#EEFFFF"
-  night: &night
+  tokyonight: &tokyonight
     primary:
       background: '#1a1b26'
       foreground: '#c0caf5'
@@ -195,10 +195,10 @@ schemes:
       cyan:    '#7dcfff'
       white:   '#c0caf5'
     indexed_colors:
-      - { index: 16, color: '0xff9e64' }
-      - { index: 17, color: '0xdb4b4b' }
+      - { index: 16, color: '#ff9e64' }
+      - { index: 17, color: '#db4b4b' }
 
-colors: *material
+colors: *tokyonight
 
 # Bell
 #
