--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -112,7 +112,7 @@ font:
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
     # family: JetBrainsMonoNL Nerd Font Mono
-    family: Iosevka Custom
+    family: JetBrains Mono
 
     # The `style` can be specified to pick a specific face.
     style: Regular
