--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -111,8 +111,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    # family: JetBrains Mono
-    family: JuliaMono
+    family: JetBrains Mono
 
     # The `style` can be specified to pick a specific face.
     style: Regular
