--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -197,7 +197,7 @@ schemes:
       - { index: 16, color: '#ff9e64' }
       - { index: 17, color: '#db4b4b' }
 
-colors: *tokyonight
+colors: *material
 
 # Bell
 #
