Add helpful alias to rewrite previous commit usernames and emails

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,6 +1,7 @@
 [alias]
 	l = log --graph --oneline --decorate
 	ll = log --stat --decorate --source -p
+	change-commits = "!f() { VAR=$1; OLD=$2; NEW=$3; shift 3; git filter-branch --env-filter \"if [[ \\\"$`echo $VAR`\\\" = '$OLD' ]]; then export $VAR='$NEW'; fi\" $@; }; f"
 [core]
 	excludesfile = ~/.gitignore
 	attributesfile = ~/.gitattributes
