Update material theme

--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -61,7 +61,7 @@ window:
   # Values for `decorations` (macOS only):
   #     - transparent: Title bar, transparent background and title bar buttons
   #     - buttonless: Title bar, transparent background and no title bar buttons
-  decorations: buttonless
+  decorations: none
 
   # Background opacity
   #
@@ -143,7 +143,7 @@ font:
   #
   # Thin strokes are suitable for retina displays, but for non-retina screens
   # it is recommended to set `use_thin_strokes` to `false`.
-  use_thin_strokes: false
+  use_thin_strokes: true
 
   # Use built-in font for box drawing characters.
   #
@@ -161,8 +161,8 @@ schemes:
       background: "#0F111A"
       foreground: "#A6ACCD"
     cursor:
-      text: "#0F111A"
-      cursor: "#EEFFFF"
+      text: "#090B10"
+      cursor: "#FFCC00"
     normal:
       black: "#000000"
       red: "#F07178"
@@ -181,34 +181,6 @@ schemes:
       magenta: "#C792EA"
       cyan: "#89DDFF"
       white: "#EEFFFF"
-  tokyonight: &tokyonight
-    primary:
-      background: '#1a1b26'
-      foreground: '#c0caf5'
-    cursor:
-      text: '#1a1b26'
-      cursor: '#c0caf5'
-    normal:
-      black:   '#15161E'
-      red:     '#f7768e'
-      green:   '#9ece6a'
-      yellow:  '#e0af68'
-      blue:    '#7aa2f7'
-      magenta: '#bb9af7'
-      cyan:    '#7dcfff'
-      white:   '#a9b1d6'
-    bright:
-      black:   '#414868'
-      red:     '#f7768e'
-      green:   '#9ece6a'
-      yellow:  '#e0af68'
-      blue:    '#7aa2f7'
-      magenta: '#bb9af7'
-      cyan:    '#7dcfff'
-      white:   '#c0caf5'
-    indexed_colors:
-      - { index: 16, color: '#ff9e64' }
-      - { index: 17, color: '#db4b4b' }
 
 colors: *material
 
