--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -143,7 +143,7 @@ font:
   #
   # Thin strokes are suitable for retina displays, but for non-retina screens
   # it is recommended to set `use_thin_strokes` to `false`.
-  use_thin_strokes: true
+  use_thin_strokes: false
 
   # Use built-in font for box drawing characters.
   #
