--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -117,7 +117,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: Rec Mono Linear
+    family: Rec Mono Casual
 
     # The `style` can be specified to pick a specific face.
     style: Regular
