Update tmux config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -29,8 +29,8 @@ bind-key -n M-9 select-window -t :9
 # Status bar configuration
 set -g status-interval 2
 set -g status-justify left
-set -g status-style bg=default,fg=white
-set -g window-status-style fg=colour244
+set -g status-style bg=default,fg=default
+set -g window-status-style fg=colour8
 set -g window-status-current-style fg=white
 set -g status-right-length 200
 set -g status-right "#{prefix_highlight} #{s|$HOME|~|:pane_current_path} - %a %d %b %I:%M %p [#{battery_percentage}]"
@@ -59,6 +59,7 @@ bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
 set -g @prefix_highlight_bg default
 set -g @prefix_highlight_show_copy_mode 'on'
 set -g @prefix_highlight_copy_mode_attr 'fg=black,bg=yellow'
+set -g @prefix_highlight_prefix_prompt 'Wait'
 
 # Plugins
 set -g @plugin 'tmux-plugins/tmux-battery'
