--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -206,75 +206,8 @@ schemes:
     indexed_colors:
       - { index: 16, color: '#ff9e64' }
       - { index: 17, color: '#db4b4b' }
-  mocha: &mocha
-    # Default colors
-    primary:
-      background: '#1e1e2e' # base
-      foreground: '#cdd6f4' # text
-      dim_foreground: '#cdd6f4' # text
-      bright_foreground: '#cdd6f4' # text
-    # Cursor colors
-    cursor:
-      text: '#1e1e2e' # base
-      cursor: '#f5e0dc' # rosewater
-    vi_mode_cursor:
-      text: '#1e1e2e' # base
-      cursor: '#b4befe' # lavender
-    # Search colors
-    search:
-      matches:
-        foreground: '#1e1e2e' # base
-        background: '#a6adc8' # subtext0
-      focused_match:
-        foreground: '#1e1e2e' # base
-        background: '#a6e3a1' # green
-      bar:
-        foreground: '#1e1e2e' # base
-        background: '#a6adc8' # subtext0
-    # Keyboard regex hints
-    hints:
-      start:
-        foreground: '#1e1e2e' # base
-        background: '#f9e2af' # yellow
-      end:
-        foreground: '#1e1e2e' # base
-        background: '#a6adc8' # subtext0
-    # Selection colors
-    selection:
-      text: '#1e1e2e' # base
-      background: '#f5e0dc' # rosewater
-    # Normal colors
-    normal:
-      black:   '#45475a' # surface1
-      red:     '#f38ba8' # red
-      green:   '#a6e3a1' # green
-      yellow:  '#f9e2af' # yellow
-      blue:    '#89b4fa' # blue
-      magenta: '#f5c2e7' # pink
-      cyan:    '#94e2d5' # teal
-      white:   '#bac2de' # subtext1
-    # Bright colors
-    bright:
-      black:   '#45475a' # surface1
-      red:     '#f38ba8' # red
-      green:   '#a6e3a1' # green
-      yellow:  '#f9e2af' # yellow
-      blue:    '#89b4fa' # blue
-      magenta: '#f5c2e7' # pink
-      cyan:    '#94e2d5' # teal
-      white:   '#bac2de' # subtext1
-    # Dim colors
-    dim:
-      black:   '#45475a' # surface1
-      red:     '#f38ba8' # red
-      green:   '#a6e3a1' # green
-      yellow:  '#f9e2af' # yellow
-      blue:    '#89b4fa' # blue
-      magenta: '#f5c2e7' # pink
-      cyan:    '#94e2d5' # teal
-      white:   '#bac2de' # subtext1
 
-colors: *mocha
+colors: *tokyonight
 
 # Bell
 #
